WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276653
[svg] setting `d: none` on a `<path>` does not override the `d` SVG attribute
https://bugs.webkit.org/show_bug.cgi?id=276653
Summary
[svg] setting `d: none` on a `<path>` does not override the `d` SVG attribute
Antoine Quint
Reported
2024-07-16 01:55:10 PDT
Setting `d: none` on an SVG `<path>` has no effect and the SVG attribute still sets the path data. There does not seem to be any WPT test covering this.
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2024-07-16 02:08:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30855
Antoine Quint
Comment 2
2024-07-16 02:10:45 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/47146
EWS
Comment 3
2024-07-16 23:52:19 PDT
Committed
281041@main
(e33f42cd046a): <
https://commits.webkit.org/281041@main
> Reviewed commits have been landed. Closing PR #30855 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2024-07-16 23:53:14 PDT
<
rdar://problem/131901337
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug