[svg] setting `d: none` on a `<path>` does not override the `d` SVG attribute https://bugs.webkit.org/show_bug.cgi?id=276653

Reviewed by Nikolas Zimmermann.

If the `d` CSS property is set to `none`, the resulting `SVGRenderStyle::d()` value is `nullptr`.
We must account for this in `SVGPathElement::path()` and `SVGPathElement::pathByteStream()` and
return an empty path in the case that we don't have a `BasicShapePath` set on the style. In fact,
at long as the `d` CSS property is enabled, we should never return the SVG attribute value.

Making this code change alone yielded two test regressions:

    - svg/custom/svg-curve-with-relative-coordinates.html
    - svg/animations/path-animation.svg

Indeed, neither of those two tests explicitly sets the `d` SVG attribute, relying instead on `<animate>` or
the `pathSegList` DOM API to set the path data. The lack of a `d` SVG attribute means the traditional mechanism
to compile a list of presentation attributes for a `<path>` attribute will not pick up the `d` property.

So we add a new method to collect additional presentational hints as was already done for the HTML `<img>`
element, promoting the `collectExtraStyleForPresentationalHints()` method from `HTMLImageElement` to a virtual
method on `StyledElement` and making `SVGPathElement` override it. Using this method, we can collect the `d`
presentational hint if it hasn't already been picked up.

Finally, since the lack of accounting for `d: none` when rendering wasn't caught by existing tests, we add
a new WPT reftest.

* LayoutTests/imported/w3c/web-platform-tests/svg/animations/spaces-at-end-of-path-data-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/svg/path/property/d-none-expected.svg: Added.
* LayoutTests/imported/w3c/web-platform-tests/svg/path/property/d-none-ref.svg: Added.
* LayoutTests/imported/w3c/web-platform-tests/svg/path/property/d-none.svg: Added.
* Source/WebCore/dom/StyledElement.cpp:
(WebCore::StyledElement::rebuildPresentationalHintStyle):
* Source/WebCore/dom/StyledElement.h:
(WebCore::StyledElement::collectExtraStyleForPresentationalHints):
* Source/WebCore/html/HTMLImageElement.h:
* Source/WebCore/svg/SVGPathByteStream.h:
* Source/WebCore/svg/SVGPathElement.cpp:
(WebCore::SVGPathElement::pathByteStream const):
(WebCore::SVGPathElement::path const):
(WebCore::SVGPathElement::collectPresentationalHintsForAttribute):
(WebCore::SVGPathElement::collectExtraStyleForPresentationalHints):
(WebCore::SVGPathElement::collectDPresentationalHint):
* Source/WebCore/svg/SVGPathElement.h:

Canonical link: https://commits.webkit.org/281041@main